--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,10 +7,12 @@ or for others also in the south this applies to "errything"*/
 html {
   font-family: 'Open Sans', sans-serif;
   color: #4A4A4A;
+  background: white;
 }
 
 body {
   margin: 0 auto;
+  background: white;
 }
 
 a {
@@ -65,6 +67,7 @@ font-size: 1.2em;
 
 .logo img {
   padding-left: 24px;
+  height: 55px;
 }
 
 .logotextleft, .logotextright{
@@ -103,31 +106,59 @@ ul li {
 /*end header section*/
 
 /* slideshow */
+@keyframes slidy {
+0% { left: 0%; }
+20% { left: 0%; }
+25% { left: -100%; }
+45% { left: -100%; }
+50% { left: -200%; }
+70% { left: -200%; }
+75% { left: -300%; }
+95% { left: -300%; }
+100% { left: -400%; }
+}
 
-.slideshow, .slideshow img {
-  width: 100%;
-  height: auto;
+#slider {
+  overflow: hidden;
   max-height: 500px;
-  background-size: cover;
+  width: 100%;
 }
 
-.calltoaction {
-  background: #B1A100;
-  margin: 0 auto;
-  max-width: 300px;
-  padding: 25px 50px;
-  border-radius: 6px;
-  text-align: center;
-  position: relative;
-  top: -100px;
-  text-transform: uppercase;
-  font-size: 1.3em;
+#slider figure img {
+  width: 20%;
+  float: left;
+  height: 500px;
 }
+
+#slider figure {
+  position: relative;
+  width: 500%;
+  margin: 0;
+  left: 0;
+  text-align: left;
+  font-size: 0;
+  animation: 30s slidy infinite;
+}
+
+
+#slider button {
+  display: inline-block;
+  position: absolute;
+  background: #3F3FA5;
+  padding: 20px 100px;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  top: 300px;
+  margin: 0 auto;
+}
+
 /* end slideshow*/
 /*main content */
 
 .maincontent {
   margin: 25px 50px;
+  display: flex;
 
 }
 
@@ -136,13 +167,32 @@ ul li {
   text-align: center;
 }
 
-.logo img:hover {
-      transform: scale(5.1);
-      position: absolute;
+.aboutus {
+    width: 30%;
+      padding: 50px;
+      display: inline-flex;
+      border: 1px solid #9B9B9B;
+      flex-direction: column;
+      margin-right: 50px;
 }
 
+.aboutus button {
+  background: #3F3FA5;
+    border: none;
+    color: white;
+    padding: 20px 50px;
+    margin-top: 50px;
+    font-size: 1em;
+}
+
+
 /*footer*/
-.footer-nav {
-  display: flex;
-  flex-direction: column;
+footer ul li {
+  display: block;
+}
+
+footer {
+  background: #4A4A4A;
+  color: white;
+  min-height: 100px;
 }
