--- a/johnl-project-master 83017/resources/css/style.css
+++ b/johnl-project-master 83017/resources/css/style.css
@@ -20,7 +20,7 @@ a {
   color: #4A90E2;
 }
 
-p {
+p, ul {
   color: #767676;
 }
 
@@ -42,16 +42,6 @@ font-size: 1.2em;
   display: none;
 }
 
-.button {
-  background: #4A4A4A;
-  display: block;
-  padding: 18px;
-  color: white;
-  width: 285px;
-  text-align: center;
-  font-weight: bold;
-  font-size: 1.1em;
-}
 
 .form {
   background: #4A4A4A;
@@ -115,10 +105,7 @@ ul li {
   font-family: 'Montserrat', sans-serif;
 }
 
-.dropdown {
-  padding-right: 24px;
-  font-family: 'Montserrat', sans-serif;
-}
+
 /*end header section*/
 
 /* slideshow */
@@ -181,6 +168,44 @@ ul li {
   margin: 0 auto;
 }
 
+
+.slideshowcontainer a {
+  width: 10%;
+  height: 500px;
+  font-size: 64px;
+  display: inline-block;
+  color: white ;
+  text-decoration: none;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 400px;
+  font-weight: bold;
+  padding-top: 40px;
+  transition: all 1s ease;
+}
+
+.slideshowcontainer a:hover {
+  background: white;
+  color: grey;
+  opacity: 0.2;
+}
+
+.slideshowcontainer img {
+  width: 100%;
+}
+.arrowL, .arrowR {
+  position: relative;
+  z-index: 10;
+}
+
+.arrowR {
+  float: right;
+}
+
+.arrowL {
+  position: absolute;
+}
+
 /* end slideshow*/
 /*main content */
 
@@ -197,17 +222,17 @@ ul li {
 
 .aboutus {
     width: 30%;
-      padding: 50px;
+      padding: 40px;
       display: inline-flex;
       border: 1px solid #9B9B9B;
       flex-direction: column;
       margin-right: 50px;
-	 	  text-align:justify;
+	 	  
 	  
 	  
 }
 
-.aboutus button {
+.aboutus .button {
   background: #3F3FA5;
     border: none;
     color: white;
@@ -215,13 +240,14 @@ ul li {
     margin-top: 50px;
     font-size: 1em;
 }
+
 .dropbtn {
-    background-color: #3F3FA5;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
+	color: #767676;
+    background-color:white;
+	font-size: 16px;
     border: none;
     cursor: pointer;
+	margin-left:16px;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -249,7 +275,10 @@ ul li {
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #615}
+.dropdown-content a:hover {background-color:
+#615;
+}
+
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
@@ -271,4 +300,20 @@ footer {
   color: white;
   min-height: 100px;
 }
+footer a {
+	color: white;
+	min-height: 100px;
+}
+.aboutus p, .aboutus ul {
+ 
+height:175px; 
+}
 
+
+
+.aboutus h1 {
+	
+
+    font-size: 40px;
+    text-decoration: underline;
+}
